Add Piper TTS integration and fix web compatibility
- Add PiperTtsService for backend TTS synthesis
- Add TtsController for TTS API endpoints
- Update chat_screen.dart to use Piper TTS with web compatibility
- Remove flutter_tts dependency (not compatible with Windows)
- Add BytesSource support for mobile/desktop, data URI for web
- Configure Piper TTS path in application.properties
- Add PIPER_TTS_SETUP.md documentation

--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -26,8 +26,8 @@ dependencies:
   
   # Sesli sohbet için
   speech_to_text: ^6.6.0
-  flutter_tts: ^4.0.2
   permission_handler: ^11.3.1
+  audioplayers: ^5.2.1
 
 dev_dependencies:
   flutter_test:
