--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -25,3 +25,7 @@ langchain4j.ollama.chat-model.model-name=llama3.2:latest
 langchain4j.ollama.chat-model.temperature=0.7
 langchain4j.ollama.chat-model.timeout=30s
 langchain4j.ollama.chat-model.top-p=0.9
+
+# Piper TTS Configuration
+# Leave empty to auto-detect, or specify full path like: C:\path\to\piper.exe
+piper.tts.path=C:/piper/piper.exe
