--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -19,13 +19,26 @@ logging.level.com.ingilizce.calismaapp=DEBUG
 logging.level.org.springframework.web=DEBUG
 
 # Ollama Chatbot Configuration
-# llama3.2:latest = 3.2B params = FAST responses (2-5 seconds)
+# qwen2.5:32b = 32B params = High quality responses (slower but better)
 langchain4j.ollama.chat-model.base-url=http://localhost:11434
-langchain4j.ollama.chat-model.model-name=llama3.2:latest
-langchain4j.ollama.chat-model.temperature=0.7
-langchain4j.ollama.chat-model.timeout=30s
+langchain4j.ollama.chat-model.model-name=qwen2.5:32b
+langchain4j.ollama.chat-model.temperature=0.2
+langchain4j.ollama.chat-model.timeout=180s
 langchain4j.ollama.chat-model.top-p=0.9
 
 # Piper TTS Configuration
 # Leave empty to auto-detect, or specify full path like: C:\path\to\piper.exe
 piper.tts.path=C:/piper/piper.exe
+
+# Redis Cache Configuration
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+spring.data.redis.password=
+spring.data.redis.timeout=2000ms
+spring.data.redis.lettuce.pool.max-active=8
+spring.data.redis.lettuce.pool.max-idle=8
+spring.data.redis.lettuce.pool.min-idle=0
+
+# Cache Configuration
+# Cache TTL: 7 days (same word won't be asked again for 7 days)
+cache.sentences.ttl=604800
